--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==2.0.2
 django-stdimage==3.0.0
-django-widget-tweaks==1.4.1
+django-widgets-improved==1.5.0
 Pillow==5.0.0
 progressbar2==3.35.2
 psycopg2==2.7.4
