--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Django==2.0.2
 django-stdimage==3.0.0
 django-widgets-improved==1.5.0
+mysqlclient==1.3.13
 Pillow==5.0.0
+pkg-resources==0.0.0
 progressbar2==3.35.2
 psycopg2==2.7.4
 python-utils==2.3.0
